[tool.poetry]
name = "lfg-matrix"
version = "0.1.0"
description = ""
authors = ["kapkekes <86285206+kapkekes@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "lfg_matrix"}]

[tool.poetry.dependencies]
python = "^3.11"
pony = "^0.7.16"
py-cord = "^2.3.2"

[tool.poetry.scripts]
lfg-matrix = "lfg_matrix.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"
mypy = "^0.991"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
line_length = 120
